# senpilot-regulatory-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: agent.yml
docs/: ACCEPTANCE_CRITERIA.md  AGENT.md  ARCHITECTURE.md  EMAIL.md  IMPLEMENTATION.md  README.md  SCRAPER.md  SCRAPER_RECON_FINDINGS.md  TESTING.md
scripts/: debug_download.py  debug_header.py  debug_matter_input.py  debug_navigate.py  debug_search_buttons.py
src/regulatory_agent/: __init__.py  __main__.py  cli.py  config.py  models.py  worker.py
src/regulatory_agent/agent/: __init__.py  parse.py  prompts.py  runner.py  tools.py
src/regulatory_agent/email/: __init__.py  gmail.py  models.py  provider.py  reply.py
src/regulatory_agent/scraper/: __init__.py  browser.py  download.py  metadata.py  navigate.py  service.py  zipper.py
tests/: test_gmail.py  test_metadata.py  test_models.py  test_parse.py  test_reply.py  test_runner.py  test_scraper_live.py  test_tools.py  test_worker.py
tests/fixtures/: m12205_matter_page.txt  sample_request_email.txt
